spacing fix

--- a/css/index.css
+++ b/css/index.css
@@ -527,7 +527,7 @@ h3.splashpage{
     letter-spacing: 2px;
     width: 100%;
     font-size: 3vw;
-    max-width: 800px;
+    max-width: 1150px;
     margin-left:auto;
     margin-right:auto;
     font-weight: 600;
